--- a/Sundouleia/Sundouleia.csproj
+++ b/Sundouleia/Sundouleia.csproj
@@ -41,7 +41,7 @@
 	   <!--Additional Package References for File Handling-->
 	   <PackageReference Include="Downloader" Version="3.3.4" />
 	   <PackageReference Include="K4os.Compression.LZ4.Legacy" Version="1.3.8" />
-	    
+	   <PackageReference Include="Blake3" Version="2.0.0" />
 	   <!--For JWT token handling, helpful for server connectivity processing-->
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.2" />
         
