--- a/Sundouleia/Sundouleia.csproj
+++ b/Sundouleia/Sundouleia.csproj
@@ -31,6 +31,7 @@
     
     <ItemGroup>
         <!--Submodules-->
+        <PackageReference Include="ZstdSharp.Port" Version="0.8.6" />
         <ProjectReference Include="..\Submodules\CkCommons\CkCommons.csproj" />
 	   <ProjectReference Include="..\Submodules\GlamourerAPI\Glamourer.Api.csproj" />
         <ProjectReference Include="..\Submodules\OtterGui\OtterGui.csproj" />
