some braincramp progress. Do not build this, it wont work.

--- a/Sundouleia/Sundouleia.csproj
+++ b/Sundouleia/Sundouleia.csproj
@@ -61,6 +61,9 @@
         <EmbeddedResource Include="Localization\jp.json" />
         <EmbeddedResource Include="Localization\fr.json" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="SundouleiaFolders\Foundation Prime\DrawSelector\" />
+    </ItemGroup>
 </Project>
 
 
