Further progress on SMAFiles.

--- a/Sundouleia/Sundouleia.csproj
+++ b/Sundouleia/Sundouleia.csproj
@@ -62,6 +62,10 @@
         <EmbeddedResource Include="Localization\jp.json" />
         <EmbeddedResource Include="Localization\fr.json" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="ModularActorData\ActorOutfit\" />
+      <Folder Include="ModularActorData\ActorItem\" />
+    </ItemGroup>
 </Project>
 
 
