some migration updates

--- a/Sundouleia/Sundouleia.csproj
+++ b/Sundouleia/Sundouleia.csproj
@@ -37,6 +37,8 @@
         <ProjectReference Include="..\Submodules\OtterGui\OtterGui.csproj" />
         <ProjectReference Include="..\Submodules\PenumbraAPI\Penumbra.Api.csproj" />
 	   <ProjectReference Include="..\Submodules\GameDataStrings\Penumbra.String.csproj" />
+	   <ProjectReference Include="..\Submodules\GameData\Penumbra.GameData.csproj" />
+	   <ProjectReference Include="..\Submodules\BrioAPI\Brio.API\Brio.API.csproj" />
         <!-- GlobalPropertiesToRemove is because of intentional platform mismatch, does not matter because it is only models, needed for vscode language server to be happy -->
 	   <ProjectReference Include="..\Submodules\SundouleiaAPI\SundouleiaAPI.csproj" GlobalPropertiesToRemove="platform" />
 
