--- a/Sundouleia/Sundouleia.csproj
+++ b/Sundouleia/Sundouleia.csproj
@@ -36,7 +36,7 @@
         <ProjectReference Include="..\Submodules\CkCommons\CkCommons.csproj" />
 	   <ProjectReference Include="..\Submodules\GlamourerAPI\Glamourer.Api.csproj" />
         <ProjectReference Include="..\Submodules\OtterGui\OtterGui.csproj" />
-        <ProjectReference Include="..\Submodules\Penumbra.API\Penumbra.Api.csproj" />
+        <ProjectReference Include="..\Submodules\Penumbra.Api\Penumbra.Api.csproj" />
 	   <ProjectReference Include="..\Submodules\Penumbra.String\Penumbra.String.csproj" />
 	   <ProjectReference Include="..\Submodules\Penumbra.GameData\Penumbra.GameData.csproj" />
 	   <ProjectReference Include="..\Submodules\BrioAPI\Brio.API\Brio.API.csproj" />
